[gd_scene load_steps=2 format=3 uid="uid://evys3pqx6phi"]

[ext_resource type="Script" path="res://CharacterDisplay.gd" id="1"]

[node name="CharacterDisplay" type="Control"]
custom_minimum_size = Vector2(60, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 80.0
script = ExtResource("1")

[node name="Sprite" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "Lv.1"
horizontal_alignment = 1
vertical_alignment = 1
